# tex-dino-sdl2

./: CMakeLists.txt  LICENSE  README.md  main.c
